  
  [Imcompatible Changes]
    * AutoFlush field is moved from IO::Handle to IO::File.
    * set_autoflush method is moved from IO::Handle to IO::File.
    * autoflush method is moved from IO::Handle to IO::File.
    * Default values of options for IO::Socket#init method are changed.
      
      Domain = 0
      
      Proto = 0
      
      Type = 0
      
      Listen = 0
      
  [Document Improvement]
    * Add IO::open link to docs for IO::Dir class.
    * Add IO::opendir link to docs for IO::File class.
  [Document Fix]
    * Fix a doc that IO::Socket#close returned int type instead of void type.
    
0.225 2023-10-15
  [Requirement Changes]
    * Require SPVM 0.990021
  [Incompatibe Changes]
    * IO::Socket::IP#set_blocking method throw an exception if a true value is given.
    * IO::Socket::IP#new dose not set SOCK_RAW Type for IPPROTO_ICMP Proto. This is Perl's IO::Socket::IP compatible beheivior.
    
  [Document Improvement]
    * Improve docs for IO::Socket::IP
    * Improve docs for IO::Socket::IP::Import::IPv4.
    * Improve docs for IO::Socket::IP::Import::IPv6.
  [Test Improvement]
    * Add tests for IO::Socket::IP.
    
0.224 2023-10-11
  [Bug Fix]
    * Fix a bug that IO::Socket::INET does not call DESTROY method in IO::Socket.
    * Fix a bug that IO::Socket::INET6 does not call DESTROY method in IO::Socket.
    * Fix a bug that IO::Socket::UNIX does not call DESTROY method in IO::Socket.
  [Incompatible Changes]
    * The default value of LocalPort option becomes 0.
    * The default value of PeerPort option becomes 0.
  [Document Improvement]
    * Improve docs for IO::Socekt::IP.
  [Test Improvement]
    * Improve IPv6 tests.
0.223 2023-10-11
  [Test Improvement]
    * Improve tests for IO::Socket::UNIX.
  [Internal Changes]
    * IO::Socket::UNIX#option_names becomes protected method.
  [Document Improvement]
    * Add docs for IO::Socket::UNIX.
    * Improve docs for IO::Socket::INET.
    * Improve docs for IO::Socket::INET6.